--- a/index.html
+++ b/index.html
@@ -10,8 +10,44 @@
     </head>
     <body>
 
+       <div class="header">
+            <div class="inner">
+                <div class="logo"></div>
+                <ul class="nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Trades</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Testimonial</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+       </div>
+
         <div class="intro"></div>
 
+        <div class="about">
+            <div class="inner">
+
+                <h1 class="title">About Martin Louis Bird</h1>
+
+                <p class="copy">MLB Carpentry was established in 2009, working in the West London area I have built up a steady business operating purely on word of mouth and recommendations from repeat customers.</p>
+
+                <p class="copy">I studied at Acton West London College where I completed my three year apprenticeship working for a high end construction company and gained a NVQ Level 2 and NVQ Level 3 in site carpentry, in which I finished with a credit and a distinction and was named apprentice of the year. During this time I was also asked to represent the college in Joinery competitions at regional level where I came first two years in a row and progressed to compete at National level.</p> 
+
+                <p class="copy">Over the last 6 and a half years I have gained a huge amount of experience working on projects from Loft conversions to custom made fitted wardrobes - this experience allows me to work alongside my customers giving them the best advice whilst making sure that I stick to the specification that they have given me.</p> 
+
+                <p class="copy">I cover all aspects of carpentry and am able to take on and project manage a job from start to finish, from fitting out a full kitchen to hanging a door - I treat every job the same ensuring the highest quality of finish.</p> 
+
+                <p class="copy">If you have any questions or would like some advice please do not hesitate to get in contact, I look forward to hearing from you.</p>
+            </div>
+
+        </div>
+
+
+
+        <script src="assets/vendor/jquery/dist/jquery.js"></script>
+        <script src="assets/vendor/jquery-backstretch/jquery.backstretch.js"></script>
         <script src="assets/build/bundle.js"></script>
     </body>
 </html>
