build about section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                 <p class="copy">I cover all aspects of carpentry and am able to take on and project manage a job from start to finish, from fitting out a full kitchen to hanging a door - I treat every job the same ensuring the highest quality of finish.</p> 
 
                 <p class="copy">If you have any questions or would like some advice please do not hesitate to get in contact, I look forward to hearing from you.</p>
-            </div>
 
+                <div class="btn-container">
+                    <a class="btn-black btn" href="#">contact now</a>
+                </div>
+            </div>
         </div>
 
 
