build gallery section
add in isotope
add bg colour to header on scroll

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
        </div>
 
-        <div class="intro"></div>
+        <div class="section--intro"></div>
 
-        <div class="about">
+        <div class="section--about">
             <div class="inner">
 
                 <h1 class="title">About Martin Louis Bird</h1>
@@ -47,10 +47,38 @@
             </div>
         </div>
 
+        <div class="section--gallery">
+
+            <div class="gallery-nav">
+                <ul>
+                    <li><a class="gallery-nav-item" href="#" data-filter="*">All</a></li>
+                    <li><a class="gallery-nav-item" href="#" data-filter=".joinery">Joinery</a></li>
+                    <li><a class="gallery-nav-item" href="#" data-filter=".carpentry">Carpentry</a></li>
+                    <li><a class="gallery-nav-item" href="#" data-filter=".locksmith">Locksmith</a></li>
+                </ul>
+            </div>
+
+            <div class="gallery-container">
+                <div class="gallery">
+                    <div class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
+                    <div class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></div>
+                </div>
+            </div>
+        </div>
+
 
 
         <script src="assets/vendor/jquery/dist/jquery.js"></script>
         <script src="assets/vendor/jquery-backstretch/jquery.backstretch.js"></script>
+        <script src="assets/vendor/isotope/dist/isotope.pkgd.js"></script>
+        <script src="assets/vendor/isotope-cells-by-row/cells-by-row.js"></script>
         <script src="assets/build/bundle.js"></script>
     </body>
 </html>
