build trades section

--- a/index.html
+++ b/index.html
@@ -81,15 +81,47 @@
                 </div>
 
                 <div class="trade-description-container">
-                    <p class="trade-description trade-description--joinery show">
-                        joinery
-                    </p>
-                    <p class="trade-description trade-description--carpentry">
-                        carpentry
-                    </p>
-                    <p class="trade-description trade-description--locksmith">
-                        locksmith
-                    </p>
+                    <div class="trade-description trade-description--joinery show">
+                        <div class="list-container">
+                            <ul class="single">
+                                <li>Fitted wardrobes</li>
+                                <li>Supply and Fitting of Staircases</li>
+                                <li>Custom made storage cabinets </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="trade-description trade-description--carpentry">
+                        <div class="list-container">
+                            <ul>
+                                <li>1st &amp; 2nd Fix </li>
+                                <li>Doors</li>
+                                <li>Flooring</li>
+                            </ul>
+                            <ul>
+                                <li>Decking </li>
+                                <li>Fencing</li>
+                                <li>Sheds/Outbuildings</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="trade-description trade-description--locksmith">
+                        <div class="list-container">
+                            <ul>
+                                <li>Yale and deadlock Entry </li>
+                                <li>Locked in </li>
+                                <li>Locked out </li>
+                            </ul>
+                            <ul>
+                                <li>Lock instillation </li>
+                                <li>Lock repairs</li>
+                                <li>Burglary repairs/Window boarding </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="btn-container">
+                    <a class="btn-black btn" href="#">contact now</a>
                 </div>
 
             </div>
