build testimonials section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
         <!-- build:css assets/build/style.css -->
+        <link rel="stylesheet" href="assets/vendor/owl.carousel/dist/assets/owl.carousel.css">
         <link rel="stylesheet" href="assets/build/style.css">
         <!-- endbuild -->
 
@@ -32,7 +33,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#trades">Trades</a></li>
                     <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#testimonial">Testimonial</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -125,15 +126,8 @@
                 </div>
 
             </div>
-
-
         </div>
         
-
-
-
-
-
 
         <span class="anchor" id="gallery"></span>
         <div class="section--gallery">
@@ -161,6 +155,34 @@
                 </div>
             </div>
         </div>
+
+
+        <span class="anchor" id="testimonials"></span>
+        <div class="section--testimonials">
+            <div class="inner">
+                <h1 class="title">Testimonials</h1>
+
+                <div class="owl-carousel">
+                    <div class="item">
+                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
+                        <p class="name">Peter Pan</p>
+                    </div>
+                    <div class="item">
+                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
+                        <p class="name">Captain Hook</p>
+                    </div>
+                    <div class="item">
+                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
+                        <p class="name">Tinkerbell</p>
+                    </div>
+                </div>
+
+                <span class="anchor" id="contact"></span>
+                <div class="btn-container">
+                    <a class="btn-black btn" href="#">contact now</a>
+                </div>
+            </div>
+        </div>
  
 
         <!-- build:js assets/build/footer.js -->
@@ -168,6 +190,7 @@
         <script src="assets/vendor/jquery-backstretch/jquery.backstretch.js"></script>
         <script src="assets/vendor/isotope/dist/isotope.pkgd.js"></script>
         <script src="assets/vendor/isotope-cells-by-row/cells-by-row.js"></script>
+        <script src="assets/vendor/owl.carousel/dist/owl.carousel.js"></script>
         <script src="assets/build/bundle.js"></script>
         <!-- endbuild -->
 
