add in fancybox

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 
+        <!-- build:js assets/build/header.js -->
+        <script src="assets/scripts/services/console.js"></script>
+        <script src="assets/vendor/jquery/dist/jquery.js"></script>
+        <script src="assets/vendor/fancybox/source/jquery.fancybox.pack.js"></script>
+        <!-- endbuild -->
 
         <!-- build:css assets/build/style.css -->
         <link rel="stylesheet" href="assets/vendor/owl.carousel/dist/assets/owl.carousel.css">
+        <link rel="stylesheet" href="assets/vendor/fancybox/source/jquery.fancybox.css">
         <link rel="stylesheet" href="assets/build/style.css">
         <!-- endbuild -->
 
-        <!-- build:js assets/build/header.js -->
-        <script src="assets/scripts/services/console.js"></script>
-        <!-- endbuild -->
+
     </head>
 
     <!--[if lt IE 7]><body class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
@@ -27,7 +31,7 @@
 
        <div class="header">
             <div class="inner">
-                <div class="logo"></div>
+                <a href="#home" class="logo"></a>
                 <ul class="nav">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -58,7 +62,7 @@
                 <p class="copy">If you have any questions or would like some advice please do not hesitate to get in contact, I look forward to hearing from you.</p>
 
                 <div class="btn-container">
-                    <a class="btn-black btn" href="#">contact now</a>
+                    <a class="btn-black btn" href="mailto:martinbird89@hotmail.co.uk">contact now</a>
                 </div>
             </div>
         </div>
@@ -122,7 +126,7 @@
                 </div>
 
                 <div class="btn-container">
-                    <a class="btn-black btn" href="#">contact now</a>
+                    <a class="btn-black btn" href="mailto:martinbird89@hotmail.co.uk">contact now</a>
                 </div>
 
             </div>
@@ -143,15 +147,15 @@
 
             <div class="gallery-container">
                 <div class="gallery">
-                    <div class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></div>
-                    <div class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></div>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt="title"></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
                 </div>
             </div>
         </div>
@@ -179,20 +183,17 @@
 
                 <span class="anchor" id="contact"></span>
                 <div class="btn-container">
-                    <a class="btn-black btn" href="#">contact now</a>
+                    <a class="btn-black btn" href="mailto:martinbird89@hotmail.co.uk">contact now</a>
                 </div>
             </div>
         </div>
  
-
         <!-- build:js assets/build/footer.js -->
-        <script src="assets/vendor/jquery/dist/jquery.js"></script>
         <script src="assets/vendor/jquery-backstretch/jquery.backstretch.js"></script>
         <script src="assets/vendor/isotope/dist/isotope.pkgd.js"></script>
         <script src="assets/vendor/isotope-cells-by-row/cells-by-row.js"></script>
         <script src="assets/vendor/owl.carousel/dist/owl.carousel.js"></script>
         <script src="assets/build/bundle.js"></script>
         <!-- endbuild -->
-
     </body>
 </html>
