--- a/index.html
+++ b/index.html
@@ -40,6 +40,37 @@
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                <div class="mobile-nav">
+                    
+                   <!--  <svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         width="30px" height="16px" viewBox="0 0 32 22.5" enable-background="new 0 0 32 22.5" xml:space="preserve">
+                        <g class="svg-menu-toggle">
+
+                        <path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
+                            c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
+                        </path>
+                        <path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
+                        </path>
+                        <path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
+                            c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
+                        </path>
+                        <rect width="30" height="16" fill="none">
+
+                        </rect>
+                        </g>
+
+                    </svg> -->
+
+                    <svg class="inline-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         width="29px" height="14.074px" viewBox="0 0 29 14.074" enable-background="new 0 0 29 14.074" xml:space="preserve">
+                         <g class="svg-menu-toggle">
+                             <line class="bar" fill="none" stroke="#222222" stroke-miterlimit="10" x1="0" y1="0.5" x2="29" y2="0.5"/>
+                             <line class="bar" fill="none" stroke="#222222" stroke-miterlimit="10" x1="0" y1="7.109" x2="29" y2="7.109"/>
+                             <line class="bar" fill="none" stroke="#222222" stroke-miterlimit="10" x1="0" y1="13.574" x2="29" y2="13.574"/>
+                             <rect width="29px" height="14.074px" fill="none"></rect>
+                         </g>
+                    </svg>
+                </div>
             </div>
        </div>
 
