--- a/index.html
+++ b/index.html
@@ -169,15 +169,21 @@
 
             <div class="gallery-container">
                 <div class="gallery">
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt="title"></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
-                    <a href="assets/img/carpentry.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="http://placehold.it/220x200" alt=""></a>
+                    <a href="assets/img/gallery/climbing_frame1.jpg" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/climbing_frame1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/climbing_frame2.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/climbing_frame2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking1.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/decking1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking2.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/decking2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking3.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/decking3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/fire_pit1.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/fire_pit1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/fire_pit2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/fire_pit2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen3.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/shed1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/shed1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/shed2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/shed2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe3.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe3_thumb.jpg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -207,6 +213,17 @@
                 <div class="btn-container">
                     <a class="btn-black btn" href="mailto:martinbird89@hotmail.co.uk">contact now</a>
                 </div>
+            </div>
+        </div>
+
+        <div class="section--footer">
+            <div class="inner">
+                <li class="left-side">
+                    <img src="assets/img/locksmith_logo.jpg" height="100" width="85">
+                </li>
+                <li class="right-side">
+                    <p>Created by <a href="http://smokincow.com/">Smokin Cow</a></p>
+                </li>
             </div>
         </div>
  
