add extra copy line

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="inner">
 
                 <h1 class="title">Trades</h1>
+                <p>Please click on the icons below to view the services we provide,<br />if what you need is not listed please contact me directly.</p>
 
                 <div class="trades-container">
                     <a href="#" class="trade trade--joinery" id="joinery">
@@ -164,26 +165,31 @@
                     <li><a class="gallery-nav-item" href="#" data-filter=".joinery">Joinery</a></li>
                     <li><a class="gallery-nav-item" href="#" data-filter=".carpentry">Carpentry</a></li>
                     <li><a class="gallery-nav-item" href="#" data-filter=".locksmith">Locksmith</a></li>
+                    <li><a class="gallery-nav-item" href="#" data-filter=".kitchen">Kitchens</a></li>
                 </ul>
             </div>
 
             <div class="gallery-container">
                 <div class="gallery">
                     <a href="assets/img/gallery/climbing_frame1.jpg" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/climbing_frame1_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/climbing_frame2.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/climbing_frame2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/decking1.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/decking1_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/decking2.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/decking2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/decking3.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/decking3_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/fire_pit1.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/fire_pit1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/climbing_frame2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/climbing_frame2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking1.jpg" height="250" width="313" rel="group" class="gallery-item decking"><img src="assets/img/gallery/decking1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking2.jpg" height="250" width="313" rel="group" class="gallery-item decking"><img src="assets/img/gallery/decking2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/decking3.jpg" height="250" width="313" rel="group" class="gallery-item decking"><img src="assets/img/gallery/decking3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/fire_pit1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/fire_pit1_thumb.jpg" alt=""></a>
                     <a href="assets/img/gallery/fire_pit2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/fire_pit2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/kitchen1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen1_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/kitchen2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/kitchen3.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/kitchen3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen1.jpg" height="250" width="313" rel="group" class="gallery-item kitchen"><img src="assets/img/gallery/kitchen1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen2.jpg" height="250" width="313" rel="group" class="gallery-item kitchen"><img src="assets/img/gallery/kitchen2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/kitchen3.jpg" height="250" width="313" rel="group" class="gallery-item kitchen"><img src="assets/img/gallery/kitchen3_thumb.jpg" alt=""></a>
                     <a href="assets/img/gallery/shed1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/shed1_thumb.jpg" alt=""></a>
                     <a href="assets/img/gallery/shed2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/shed2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/wardrobe1.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe1_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/wardrobe2.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe2_thumb.jpg" alt=""></a>
-                    <a href="assets/img/gallery/wardrobe3.jpg" height="250" width="313" rel="group" class="gallery-item carpentry"><img src="assets/img/gallery/wardrobe3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe1.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/wardrobe1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe2.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/wardrobe2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe3.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/wardrobe3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/wardrobe3.jpg" height="250" width="313" rel="group" class="gallery-item joinery"><img src="assets/img/gallery/wardrobe3_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/lock1.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/lock1_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/lock2.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/lock2_thumb.jpg" alt=""></a>
+                    <a href="assets/img/gallery/lock3.jpg" height="250" width="313" rel="group" class="gallery-item locksmith"><img src="assets/img/gallery/lock3_thumb.jpg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -220,6 +226,7 @@
             <div class="inner">
                 <li class="left-side">
                     <img src="assets/img/locksmith_logo.jpg" height="100" width="85">
+                    <img src="assets/img/crb_logo.jpg" height="100" width="84" alt="">
                 </li>
                 <li class="right-side">
                     <p>Created by <a href="http://smokincow.com/">Smokin Cow</a></p>
