--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><a href="#gallery">Gallery</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/mlbcarpentry/">Instagram</a></li>
                     </ul>
                 </div>
 
@@ -61,6 +62,7 @@
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/mlbcarpentry/">Instagram</a></li>
                 </ul>
             </div>
        </div>
@@ -202,17 +204,17 @@
 
                 <div class="owl-carousel">
                     <div class="item">
-                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
-                        <p class="name">Peter Pan</p>
+                        <h4 class="quote">“Martin has done so much at my house it's virtually impossible to list it all but it includes: fitting kitchen and utility room (including appliances), skirting, architraves, tiling, putting up shelves, fixing doors and locks and building an entire modern office room and shed in my garden. He is extremely talented, responsible, helpful and his work has a great finish. I'd highly recommend him.”</h4>
+                        <p class="name">Natasha &amp; Ally</p>
                     </div>
-                    <div class="item">
+                   <!--  <div class="item">
                         <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
                         <p class="name">Captain Hook</p>
                     </div>
                     <div class="item">
                         <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
                         <p class="name">Tinkerbell</p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <span class="anchor" id="contact"></span>
