--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <div class="inner">
                 <div class="mobile-nav-container">
                     <ul class="mobile-nav">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a target="_blank" href="https://www.instagram.com/mlbcarpentry/">Instagram</a></li>
+                        <li><a class="mobile-nav-item" href="#home">Home</a></li>
+                        <li><a class="mobile-nav-item" href="#about">About</a></li>
+                        <li><a class="mobile-nav-item" href="#gallery">Gallery</a></li>
+                        <li><a class="mobile-nav-item" href="#testimonials">Testimonials</a></li>
+                        <li><a class="mobile-nav-item" href="#contact">Contact</a></li>
+                        <li><a class="mobile-nav-item" target="_blank" href="https://www.instagram.com/mlbcarpentry/">Instagram</a></li>
                     </ul>
                 </div>
 
@@ -204,17 +204,17 @@
 
                 <div class="owl-carousel">
                     <div class="item">
-                        <h4 class="quote">“Martin has done so much at my house it's virtually impossible to list it all but it includes: fitting kitchen and utility room (including appliances), skirting, architraves, tiling, putting up shelves, fixing doors and locks and building an entire modern office room and shed in my garden. He is extremely talented, responsible, helpful and his work has a great finish. I'd highly recommend him.”</h4>
+                        <h4 class="quote">“Martin has done so much at my house it's virtually impossible to list it all but it includes: fitting kitchen, skirting, architraves, tiling and building an entire modern office room and shed in my garden. He is extremely talented, responsible, helpful and his work has a great finish. I'd highly recommend him.”</h4>
                         <p class="name">Natasha &amp; Ally</p>
                     </div>
-                   <!--  <div class="item">
-                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
-                        <p class="name">Captain Hook</p>
+                    <div class="item">
+                        <h4 class="quote">“MLB carpentry have been working with our school for the past 4 years. The work completed is of excellent standard and extremely good value. The wealth of knowledge and advice provided independently is invaluable when making decisions for the school premises.”</h4>
+                        <!-- <p class="name">Captain Hook</p> -->
                     </div>
                     <div class="item">
-                        <h4 class="quote">“Praesent porttitor consequat sapien, fermentum laoreet neque vestibulum et.”</h4>
-                        <p class="name">Tinkerbell</p>
-                    </div> -->
+                        <h4 class="quote">“Martin has completed a considerable amount of work for us, this includes kitchen fitting, internal doors, skirting, fitted cupboards and laying of wood flooring. Martins work has been excellent he's conscientious, paying attention to the smallest detail. We have been delighted with the finish of his work and would highly recommend him.”</h4>
+                        <p class="name">Simon Hawley</p>
+                    </div>
                 </div>
 
                 <span class="anchor" id="contact"></span>
