--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="item">
                         <h4 class="quote">“MLB carpentry have been working with our school for the past 4 years. The work completed is of excellent standard and extremely good value. The wealth of knowledge and advice provided independently is invaluable when making decisions for the school premises.”</h4>
-                        <!-- <p class="name">Captain Hook</p> -->
+                        <p class="name">Colham Manor primary school</p>
                     </div>
                     <div class="item">
                         <h4 class="quote">“Martin has completed a considerable amount of work for us, this includes kitchen fitting, internal doors, skirting, fitted cupboards and laying of wood flooring. Martins work has been excellent he's conscientious, paying attention to the smallest detail. We have been delighted with the finish of his work and would highly recommend him.”</h4>
