--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+        <link rel="icon" type="image/png" href="/assets/img/favicon.ico">
 
         <!-- build:js assets/build/header.js -->
         <script src="assets/scripts/services/console.js"></script>
